Convert appscript to just iframe
Chuyển giao diện web app từ app script về iframe trong page riêng

--- a/index.html
+++ b/index.html
@@ -5,165 +5,12 @@
   <meta charset="utf-8">
   <title>Leaflet and Google Form GPS Data Collection</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta property="og:title" content="Leaflet and Google Form GPS Data Collection" />
-  <meta property="og:type" content="website" />
-  <!--Bootstrap for form-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-  <!--leaflet-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
-  <!--Location Plugin-->
-  <script src='https://cdn.jsdelivr.net/leaflet.locatecontrol/0.49.0/L.Control.Locate.min.js'></script>
-  <link href='https://cdn.jsdelivr.net/leaflet.locatecontrol/0.49.0/L.Control.Locate.css' rel='stylesheet' />
-  <!--Tabletop and GeoJson-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.4.3/tabletop.min.js"></script>
-  <script src="js/geojson.js"></script>
-  <!--Fonts-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900' rel='stylesheet' type='text/css'>
-
-  <script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
-  <style>
-    *{font-family: 'Source Sans Pro', sans-serif;}
-    .map {height:70%}
-    #map {position:relative;height:600px;}
-    .leaflet-popup-content {font-size: medium;}
-    .form-group{width:300px;margin-bottom:0;}
-    .form-control{resize:none;}
-    .text-muted{font-size:smaller;}
-    hr {margin: 10px 0;}
-  </style>
+  <title>Map</title>
 </head>
 
 <body>
-  <div class="map">
-    <div id="map"></div>
-  </div>
-  <div class="container">
-    Check out the simple <a href="https://github.com/aogdp/gpsform/blob/gh-pages/README.md">instructions</a> to learn how to create your own collection app.
-  </div>
-  <script>
-    var map = L.map('map'); //Initialize the map
-
-    var formId = '1S5pA99a5ANc146rraqTCCTwnEyvwPmtCLYalqCDhBbQ';
-    var gsheet = '1dN5bI5DbLZHDeIJStmhinHCqMwkX9nb_lXbXeM5FWOI';
-
-    //Add a basemap
-    // Leaflet Provider: https://leaflet-extras.github.io/leaflet-providers/preview/
-    // var OpenStreetMap_Mapnik = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    // 	maxZoom: 19,
-    // 	attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-    // }).addTo(map);
-
-    //Add a Satellite basemap
-    var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-      attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-    }).addTo(map);
-
-    //Add Location Options - override the plugin default popup and circle
-    var locOptions = {
-      drawCircle: false,
-      showPopup: false,
-      follow:true,
-      enableHighAccuracy: true,
-    };
-
-    //Add Location
-    var loc = L.control.locate(locOptions).addTo(map);
-
-    //Endable Location at page load and do things once the location is found
-    loc.start();
-
-    var marker, circle, lat, lng; //create variables used throughout the map
-
-
-    map.on('locationfound', function(e) {
-      collectData(e);
-    });
-    
-    setTimeout(function() {
-      if(lat) {
-        return false;
-      }else{
-        console.log('no loc');
-        loc.stop();
-        //https://leafletjs.com/reference-1.5.0.html
-        map.setView([21.2200016,105.8066136], 15);
-        alert('No location found')
-      }
-    }, 6000);
-
-    map.on('click', function(e) {
-      collectData(e);
-    });
-
-
-    //Add form response points
-    //Add an empty geojson layer for the google sheet points and create the popup
-    var gps = new L.geoJson(null, {
-      onEachFeature: function(feature, layer) {
-        layer.bindPopup(feature.properties.Description)
-      }
-    });
-
-    //Grab the google sheet data using tabletop - published to the web not just shared - and use geojson.min.js to convert into proper geojson format
-    var tabletop = Tabletop.init( {
-      key: gsheet,
-      simpleSheet: true,
-      parseNumbers: true,
-      callback: function(data, tabletop) {
-        var gpsData = GeoJSON.parse(data, {Point: ['Latitude', 'Longitude']});
-
-        //add that data to the geojson layer created earlier
-        gps.addData(gpsData);
-        gps.addTo(map);
-      },
-    });
-
-
-    function collectData(e) {
-      //console.log(e);
-      lat = e.latlng.lat;
-      lng = e.latlng.lng;
-
-      var form = '<div id="formdiv"> <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSdsRAXWgQ2mU-C6utz4196tdLo_FtIxoERrAQpuOtl9YcFYTg/formResponse" target="_self" method="POST" id="mG61Hd"> <div class="form-group"> <h6><b>Thông báo tình trạng tấm BTXM</b></h6> <div class="form-group"> <input class="form-check-input" type="radio" name="entry.427826228" value="Nứt vỡ" checked> <label>Nứt vỡ</label> <input class="form-check-input" type="radio" name="entry.427826228" value="Phụt bùn"> <label>Phụt bùn</label> <input class="form-check-input" type="radio" name="entry.427826228" value="Sụt lún"> <label>Sụt lún</label> <br/> <input class="form-check-input" type="radio" name="entry.427826228" value="Đã xử lý xong"> <label>Đã xử lý xong</label> </div> <div> <label for="description" class="requiredField" name="entry.1494342273">Mô tả bằng hình ảnh</label> <input type="file" name="pic" accept="image/*"> </div> <div class="form-group"> <label for="description" class="requiredField" name="entry.756685496">Mô tả bằng văn bản</label> <textarea class="form-control" rows="1" id="descrip" placeholder="Kích thước (DxR)..."></textarea> </div> <em class="text-muted">Click submit to add a point at this location.</em> <div id="formHelp"></div> <hr /> </div> <button type="submit" id="submit" class="btn btn-default btn-sm">Submit</button> </form> </div>';
-
-      if (e.accuracy) {
-        var radius = (e.accuracy / 2) * 3.28084;
-        circle = L.circle(e.latlng, radius).addTo(map);
-      }
-      marker = L.marker(e.latlng).addTo(map)
-      .bindPopup(form);
-      
-      //if you try and open the popup right away the location may not be ready, eventhough it's firing after locationfound
-      setTimeout(function() {
-        marker.openPopup();
-        loc.stop();
-      }, 100);
-
-      marker.on('popupopen', function() {
-        $('#projectform').submit(function(event) {
-          event.preventDefault();
-          var descrip = $('#descrip').val();
-            //console.log(descrip);
-            if (descrip) {
-              //console.log(descrip);
-              // $('#formdiv').html('<iframe src="https://docs.google.com/forms/d/' + formAnsId + '/viewform?entry.' + formLat + '=' + lat + '&entry.' + formLng + '=' + lng + '&entry.'+ formText + '=' + descrip + '&submit=Submit" seamless scrolling="no" style="overflow:hidden;height:375px;border:lightgray solid thin;"></iframe>');
-            } else {
-              $('#formHelp').html('<span style="color:red;">Please enter a description of your point.</span>')
-            }
-          });
-      });
-      if (marker) {
-        marker.on('popupclose', function() {
-          map.removeLayer(marker);
-          if (map.hasLayer(circle)) {
-            map.removeLayer(circle);
-          }
-        });
-      }
-    }
-  </script>
+  <iframe src="https://script.google.com/macros/s/AKfycby-nAmMm8YOB_cbc_Rvch2om_C7yjm0PHoNJER5/exec"
+  frameborder="0" width="100%" height="500px"></iframe>
 </body>
 
 </html>
