--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <iframe src="https://script.google.com/macros/s/AKfycby-nAmMm8YOB_cbc_Rvch2om_C7yjm0PHoNJER5/exec"
-  frameborder="0" width="100%" height="500px"></iframe>
+  frameborder="0" width="100%" height="500px" allow="geolocation; camera"></iframe>
 </body>
 
 </html>
