Thêm chắc năng fullscreen

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Leaflet and Google Form GPS Data Collection</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Báo cáo sự cố đèn</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
   <title>Map</title>
 </head>
 
 <body>
   <iframe src="https://script.google.com/macros/s/AKfycby-nAmMm8YOB_cbc_Rvch2om_C7yjm0PHoNJER5/exec"
-  frameborder="0" width="100%" height="500px" allow="geolocation; camera"></iframe>
+  frameborder="0" width="100%" height="500px" allow="geolocation; camera; fullscreen"></iframe>
+  <!-- Credit to: https://sites.google.com/a/chromium.org/dev/Home/chromium-security/deprecating-permissions-in-cross-origin-iframes-->
 </body>
 
 </html>
