--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>Báo cáo sự cố đèn</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Map</title>
+      <style>
+      *{font-family: 'Source Sans Pro', sans-serif;}
+       body {
+        padding: 0;
+        margin: 0;
+      }
+      html, body, #map {position : absolute;height : 100%;width : 100vw}
+
+      </style>
+
 </head>
 
 <body>
   <iframe src="https://script.google.com/macros/s/AKfycby-nAmMm8YOB_cbc_Rvch2om_C7yjm0PHoNJER5/exec"
-  frameborder="0" width="100%" height="500px" allow="geolocation; camera; fullscreen"></iframe>
+  frameborder="0" width="100%" height="100%" allow="geolocation; camera; fullscreen"></iframe>
   <!-- Credit to: https://sites.google.com/a/chromium.org/dev/Home/chromium-security/deprecating-permissions-in-cross-origin-iframes-->
 </body>
 
